🔧 refactor: Improve sidebar component structure

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,24 +3,19 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Track</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <title>Track - Gerencie seu empreendimento de forma inteligente</title>
+    <meta name="description" content="Track é a plataforma completa para gerenciar vendas, gastos, clientes, leads e boletos. Tudo em um só lugar, de forma simples e eficiente." />
+    <meta name="author" content="Track" />
+    <meta name="keywords" content="gestão empresarial, CRM, vendas, controle financeiro, empreendedorismo" />
 
-    <meta property="og:title" content="Track" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <meta property="og:title" content="Track - Gerencie seu empreendimento de forma inteligente" />
+    <meta property="og:description" content="Track é a plataforma completa para gerenciar vendas, gastos, clientes, leads e boletos. Tudo em um só lugar, de forma simples e eficiente." />
     <meta property="og:type" content="website" />
-    <meta
-      property="og:image"
-      content="https://lovable.dev/opengraph-image-p98pqg.png"
-    />
+    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@lovable_dev" />
-    <meta
-      name="twitter:image"
-      content="https://lovable.dev/opengraph-image-p98pqg.png"
-    />
+    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
   </head>
 
   <body>
